# SnakeGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: console.c  console.h  game.c  game.h  key_control.c  key_control.h  main.c  userinfo.c  userinfo.h  util.c  util.h
